@@ -1,0 +1,4 @@
+AUTHORS
+NEWS
+README
+THANKS
